# jjpp

./: .pre-commit-config.yaml  LICENSE  README.md  TESTING.md  compose.yml  pyproject.toml
.github/workflows/: build.yml
src/jjpp/: cli.py  jj.py  jj_cli.py  main.py  utils.py
src/jjpp/forges/: __init__.py  base.py  gerrit.py  github.py  phabricator.py
src/jjpr/: cmds.py  cmds_test.py  conftest.py  jj.py  main.py  utils.py
src/jjpr/forges/: __init__.py  base.py  base_test.py  cr.py  cr_test.py  detect.py  detect_test.py  gerrit.py  github.py  phabricator.py
src/jjpr/forges/gerrit/: README.md  client.py  client_test.py  conftest.py  forge.py  forge_test.py
src/jjpr/forges/github/: README.md  conftest.py  forge.py  forge_test.py
src/jjpr/forges/phabricator/: README.md  client.py  conftest.py  forge.py  forge_test.py
src/jjpr/utils/: exec.py  exec_test.py  git.py  git_test.py  jj.py  jj_test.py  netrc.py  netrc_test.py  text.py  text_test.py
tests/: cmds.py  conftest.py  jj.py  main.py  utils.py
tests/forges/: base.py  init.py  phabricator.py
tests/integration/: conftest.py  gerrit.py  phabricator.py
tests/integration/gerrit/: conftest.py  gerrit.py
tests/integration/github/: conftest.py  github.py
tests/integration/phabricator/: conftest.py  phabricator.py
