[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jjpp"
version = "0.1.0"
description = "Unified CLI for multiple code review forges (GitHub, Phabricator, Gerrit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
jjpp = "jjpp.main:run"
_test_jjpy = "jjpp.jj_cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "prek>=0.4.5",
    "ruff>=0.1.0",
    "ty>=0.0.49",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jjpp"]
